test/semantics/programs/invalid/invalid-post-op.guav
# should fail since we can't do ++ on dictionaries

c = []
print(c++)